--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "aos": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.31.0",
     "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
     "semantic-ui-css": "^2.4.1",
